Fix z-index

--- a/src/sections/WhatWeDo/WhatWeDo.module.scss
+++ b/src/sections/WhatWeDo/WhatWeDo.module.scss
@@ -55,6 +55,7 @@
     }
 
     .currentItemContainer {
+        z-index: 2;
         display: flex;
         align-items: center;
         flex-direction: column;
